# RNN_kernel

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  rnn_benchmark.py
docs/: a100_baseline_study.md  a100_forward_kernel_study.md  a100_fp32_method_study.md  a100_h256_backward_study.md  codex_development.md  cuda_forward_kernel_study.md  custom_gru_kernel_study.md  environment.md  optimization_plan.md  triton_forward_kernel_study.md
prod/a100_gru_h256/: __init__.py  pyproject.toml  requirements-build.txt  requirements-runtime.txt
prod/a100_gru_h256/docs/: BUILD_AND_PACKAGE.md  LIMITATIONS.md
prod/a100_gru_h256/kernels/: a100_gru_h256_sm80.cubin
prod/a100_gru_h256/scripts/: check_env.py  functional_test.py  package_wheel.sh
scripts/: benchmark_a100_forward.py  benchmark_cuda_forward.py  benchmark_triton_forward.py  build_a100_prod_cubin.py  env.sh  env_nsight.sh  extract_nsys_kernel_table.py  profile_a100_forward.py  profile_a100_h256_step.py  profile_rnn_case.py  run_a100_baseline.sh  run_custom_gru_study.sh  run_fp32_backend_study.sh  run_fp32_chunk_study.sh  run_nsight_a100_forward.sh
src/rnn_kernel/: __init__.py  cuda_gru_forward.py  custom_gru.py  (+2 more)
src/rnn_kernel/a100/prod/: MANIFEST.in  README.md  gru.py  pyproject.toml
src/rnn_kernel/a100/prod/a100_gru_h256/: MANIFEST.in  README.md  gru.py
src/rnn_kernel/a100/prod/a100_gru_h256/docs/: API.md  LIMITATIONS.md
src/rnn_kernel/a100/prod/a100_gru_h256/kernels/: a100_gru_h256_kernels.cu  a100_gru_h256_sm80.cubin
src/rnn_kernel/a100/prod/a100_gru_h256/scripts/: benchmark.py  build_cubin.py  check_env.py  demo.py  functional_test.py  package_archive.sh
src/rnn_kernel/a100/prod/kernels/: __init__.py
src/rnn_kernel/a100/prod/scripts/: export_a100_gru_h256.py
tests/: test_a100_gru_autograd.py  test_a100_gru_forward.py  test_a100_prod.py  test_cuda_gru_forward.py  test_custom_gru.py  test_sequence_chunking.py  test_triton_gru_forward.py
(+6 files in other folders)
